--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install:client": "cd client && npm install",
     "build:server": "babel server --out-dir dist",
     "build:client": "cd client && npm run build",
-    "build": "npm run build:server && npm run build:client",
+    "build": "npm run build:server && npm run install:client && npm run build:client",
     "seed": "cd server && cd config && node scripts/seedDB",
     "restart": "npm run build:server && npm run start",
     "heroku-postbuild": "npm run build",
