--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install:client": "cd client && npm install",
+    "install:server": "npm install",
     "build:server": "babel server --out-dir dist",
     "build:client": "cd client && npm run build",
-    "build": "npm run build:server && npm run install:client && npm run build:client",
+    "build": "npm run install:server && npm run build:server && npm run install:client && npm run build:client",
     "seed": "cd server && cd config && node scripts/seedDB",
     "restart": "npm run build:server && npm run start",
     "heroku-postbuild": "npm run build",
