--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel": "^6.23.0",
     "bcrypt": "^3.0.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.3",
