--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel": "^6.23.0",
     "bcrypt": "^3.0.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.3",
