--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "babel-core": "^7.0.0-bridge.0",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
